# TorchGWAS

./: CITATION.cff  LICENSE  README.md  pyproject.toml
benchmarks/: materialize_runtime_table.py  plot_linear_benchmarks.py  profile_linear_memory.py  profile_linear_streaming_large.py  run_multivariate_case.py  summarize_plink_accuracy.py
docs/: application-note-assets.md  data-format.md  install.md  reproduce-benchmarks.md  tutorial-linear.md  tutorial-multivariate.md
examples/: run_demo.sh
examples/expected/: run_summary.json
examples/toy/: covar.npy  covar.tsv  genotype.npy  markers.tsv  pheno.npy  pheno.tsv  samples.tsv
real_case/: README.md
real_case/t1_128/: covariate_columns.txt  run_t1_real_case.sh  summary.json  trait_columns.txt
results/: README.md
results/benchmarks/: BENCHMARK_REPORT.md  accuracy_plink.tsv  linear_memory_profile.tsv  linear_memory_profile_report.md  linear_streaming_profile_large.tsv  linear_streaming_profile_large_report.md  multivariate_case.tsv  runtime_scaling.tsv
scripts/: build_real_smoke_dataset.py  generate_toy_data.py  launch_real_smoke_worker.sh  make_figures.py  prepare_t1_real_case.py  run_linear_unrelated.py  write_real_case_commands.py  write_real_smoke_commands.py
src/torchgwas/: __init__.py  api.py  cli.py  datasets.py  io.py  kernels.py  linear.py  multivariate.py  preprocess.py  types.py  utils.py
tests/: test_api.py  test_cli.py  test_relatedness_script.py
