[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torchgwas"
version = "0.1.0"
description = "GPU-aware linear and multivariate GWAS for dense phenotype panels."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "TorchGWAS Authors"}
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.8",
  "scipy>=1.10",
  "torch>=2.0"
]

[project.optional-dependencies]
dev = []

[project.scripts]
torchgwas = "torchgwas.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
